--- a/project-meu-cantinho/frontend/src/app/features/admin/filiais/filial-detail/filial-detail.component.html
+++ b/project-meu-cantinho/frontend/src/app/features/admin/filiais/filial-detail/filial-detail.component.html
@@ -8,11 +8,7 @@
 
   <app-loading *ngIf="loading"></app-loading>
 
-  <div *ngIf="error" class="alert alert-danger">
-    {{ error }}
-  </div>
-
-  <div *ngIf="filial && !loading" class="filial-card">
+  <div *ngIf="filial && !loading" class="filial-info">
     <h2>{{ filial.nome }}</h2>
 
     <div class="filial-details">
